--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Predict Based on Age and Gender</h1>
+        <h1>car price predictor</h1>
         <form action="/predict" method="POST">
             <label for="year">car model year:</label>
             <input type="text" id="year" name="year" required>
