--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             <label for="year">car model year:</label>
             <input type="text" id="year" name="year" required>
 
-            <label for="present price">present price:</label>
+            <label for="present price">present price in lakhs:</label>
             <input type="text" id="present price" name="present price" required>
 
             <label for="kms driven">kms driven:</label>
