--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <title>car price predictor</title>
     <style>
         body {
+             background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-ai-image%2Fdark-blue-backlit-background-cars-middle-dark-street-generative-ai_80726601.htm&psig=AOvVaw2vvO4CtMGSfyMpyz2rcj18&ust=1729583869205000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiplpqAn4kDFQAAAAAdAAAAABAE');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
